@@ -1,106 +1,112 @@
 package com.football.ticketsale.service;
 
+import com.football.ticketsale.domain.service.UserDomainService;
 import com.football.ticketsale.dto.UserProfileDto;
 import com.football.ticketsale.dto.UserRegistrationDto;
 import com.football.ticketsale.entity.UserEntity;
-import com.football.ticketsale.entity.CountryEntity;
-import com.football.ticketsale.repository.UserRepository;
-import com.football.ticketsale.repository.CountryRepository;
-import jakarta.transaction.Transactional;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.stereotype.Service;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
-    private final UserRepository userRepository;
-    private final CountryRepository countryRepository;
+
+    private final UserDomainService userDomainService;
     private final PasswordEncoder passwordEncoder;
 
-    public UserServiceImpl(UserRepository userRepository,
-                           CountryRepository countryRepository,
-                           PasswordEncoder passwordEncoder) {
-        this.userRepository = userRepository;
-        this.countryRepository = countryRepository;
+    public UserServiceImpl(UserDomainService userDomainService, PasswordEncoder passwordEncoder) {
+        this.userDomainService = userDomainService;
         this.passwordEncoder = passwordEncoder;
     }
 
     @Override
     @Transactional
-    public void saveUser(UserRegistrationDto userRegistrationDto) {
+    public void saveUser(UserRegistrationDto userDto) {
         UserEntity user = new UserEntity();
-        user.setUsername(userRegistrationDto.getUsername());
-        user.setEmail(userRegistrationDto.getEmail());
-        user.setPasswordHash(passwordEncoder.encode(userRegistrationDto.getPassword()));
+        user.setUsername(userDto.getUsername());
+        user.setEmail(userDto.getEmail());
+        user.setFullName(userDto.getFullName());
+        user.setPin(userDto.getPin());
+        user.setPasswordHash(passwordEncoder.encode(userDto.getPassword()));
         user.setAuthorizationLevel("user");
-        user.setFullName(userRegistrationDto.getFullName());
-        user.setPin(userRegistrationDto.getPin());
 
-        userRepository.save(user);
+        userDomainService.save(user);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public UserEntity findUserByEmail(String email) {
+        if (email == null || email.isBlank()) return null;
+        return userDomainService.findByEmail(email).orElse(null);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public UserEntity findUserByUsername(String username) {
+        if (username == null || username.isBlank()) return null;
+        return userDomainService.findByUsername(username).orElse(null);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<UserRegistrationDto> findAllUsers() {
+        return userDomainService.findAll().stream()
+                .map(this::mapToRegistrationDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public void updateUser(String currentUsername, UserProfileDto dto) throws Exception {
-        UserEntity user = userRepository.findByUsername(currentUsername)
-                .orElseThrow(() -> new Exception("Korisnik nije pronađen"));
-
-        if (dto.getFullName() != null && !dto.getFullName().trim().isEmpty()) {
-            user.setFullName(dto.getFullName());
+    public void updateUser(String currentUsername, UserProfileDto userProfileDto) throws Exception {
+        if (currentUsername == null || currentUsername.isBlank()) {
+            throw new IllegalArgumentException("Username is required");
         }
 
-        if (dto.getEmail() != null && !dto.getEmail().trim().isEmpty()) {
-            user.setEmail(dto.getEmail());
-        }
+        UserEntity user = userDomainService.findByUsername(currentUsername)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
 
-        if (dto.getNewPassword() != null && !dto.getNewPassword().trim().isEmpty()) {
-            if (dto.getNewPassword().length() < 8) {
-                throw new Exception("Lozinka mora imati najmanje 8 znakova!");
+        String newEmail = userProfileDto.getEmail();
+        if (newEmail != null && !newEmail.isBlank() && !newEmail.equalsIgnoreCase(user.getEmail())) {
+            if (userDomainService.existsByEmail(newEmail)) {
+                throw new IllegalStateException("Email is already in use");
             }
-            if (!dto.getNewPassword().equals(dto.getConfirmPassword())) {
-                throw new Exception("Lozinke se ne podudaraju!");
-            }
-            user.setPasswordHash(passwordEncoder.encode(dto.getNewPassword()));
+            user.setEmail(newEmail);
         }
 
-        userRepository.save(user);
+        if (userProfileDto.getFullName() != null && !userProfileDto.getFullName().isBlank()) {
+            user.setFullName(userProfileDto.getFullName());
+        }
+
+        String newPassword = userProfileDto.getNewPassword();
+        if (newPassword != null && !newPassword.isBlank()) {
+            String confirm = userProfileDto.getConfirmPassword();
+            if (confirm == null || !newPassword.equals(confirm)) {
+                throw new IllegalArgumentException("Passwords do not match");
+            }
+            user.setPasswordHash(passwordEncoder.encode(newPassword));
+        }
+
+        userDomainService.save(user);
     }
 
     @Override
     @Transactional
     public void deleteUser(String username) {
-        UserEntity user = userRepository.findByUsername(username).orElse(null);
-        if (user != null) {
-            userRepository.delete(user);
-        }
+        if (username == null || username.isBlank()) return;
+        userDomainService.findByUsername(username).ifPresent(userDomainService::delete);
     }
 
-    @Override
-    public UserEntity findUserByEmail(String email) {
-        return userRepository.findByEmail(email).orElse(null);
-    }
-
-    @Override
-    public UserEntity findUserByUsername(String username) {
-        return userRepository.findByUsername(username).orElse(null);
-    }
-
-    @Override
-    public List<UserRegistrationDto> findAllUsers() {
-        List<UserEntity> users = userRepository.findAll();
-        return users.stream()
-                .map(this::mapToUserDto)
-                .collect(Collectors.toList());
-    }
-
-    private UserRegistrationDto mapToUserDto(UserEntity user) {
-        UserRegistrationDto userRegistrationDto = new UserRegistrationDto();
-        userRegistrationDto.setId(user.getUserUid());
-        userRegistrationDto.setUsername(user.getUsername());
-        userRegistrationDto.setEmail(user.getEmail());
-        return userRegistrationDto;
+    private UserRegistrationDto mapToRegistrationDto(UserEntity user) {
+        UserRegistrationDto dto = new UserRegistrationDto();
+        dto.setId(user.getUserUid());
+        dto.setFullName(user.getFullName());
+        dto.setUsername(user.getUsername());
+        dto.setEmail(user.getEmail());
+        dto.setPin(user.getPin());
+        return dto;
     }
 }
